<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BookBrow</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Create Account</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_subtitle">Sign in to access BookBrow</string>
    <string name="join_title">Join BookBrow!</string>
    <string name="join_subtitle">Create your account and start borrowing books</string>
    <string name="email_hint">your.email@example.com</string>
    <string name="password_hint">Enter your password</string>
    <string name="full_name_hint">Enter your Full Name</string>
    <string name="confirm_password_hint">Confirm your password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="no_account">Don\'t have an account? Sign Up</string>
    <string name="already_account">Already have an account? Sign In</string>
    <string name="label_email">Email Address</string>
    <string name="label_password">Password</string>
    <string name="label_full_name">Full Name</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="loading">Please wait…</string>
    <string name="error_empty_email">Email address is required</string>
    <string name="error_invalid_email">Enter a valid email address</string>
    <string name="error_empty_password">Password is required</string>
    <string name="error_short_password">Password must be at least 8 characters</string>
    <string name="error_empty_name">Full name is required</string>
    <string name="error_password_mismatch">Passwords do not match</string>
    <string name="register_success">Account created! Please sign in.</string>
    <string name="welcome_user">Welcome, %1$s!</string>
    <string name="btn_logout">Log Out</string>
    <string name="main_welcome_message">You are successfully logged in to BookBrow.</string>
    <string name="default_web_client_id">479851263262-srhurugk43nu8ljq8q9j3d4hrad6ql2m.apps.googleusercontent.com</string>
    <string name="sign_in_with_google">Login with Google</string>
</resources>
